2014-10-11 Igor Živković <contact@igor-zivkovic.from.hr>
   * Improve mysql script portability

2014-10-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix typo in Makefile

2014-09-19 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add stop option to haveged script

2014-09-11 Ken Moffat <ken@linuxfromscratch.org>
   * Spelling fix when lxdm stops

2014-09-02 Fernando de Oliveira <famobr@yahoo.com.br>
   * Fix starting runlevel of lxdm bootscript (revert to the first version committed)

2014-09-01 Fernando de Oliveira <famobr@yahoo.com.br>
   * Fix starting runlevel of lxdm bootscript

2014-09-01 Fernando de Oliveira <famobr@yahoo.com.br>
   * Add lxdm bootscript

2014-08-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Don't try to delete non-existant PID file in dhclient

2014-08-08 Ken Moffat <ken@linuxfromscratch.org>
   * Fix spacing in dhclient messages

2014-08-07 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove systemd references
   * Remove obsolete ipx and pppoe services

2014-05-29 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Rewrote bluetooth script for bluez-5

2014-03-16 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Added haveged bootscript

2013-10-23 Igor Živković <contact@igor-zivkovic.from.hr>
   * Add dovecot init script

2013-09-08 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update location of autostart in autofs script

2013-07-25 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added restore state to alsa bootscript

2013-07-21 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added unbound bootscript

2013-07-10 Igor Živković <contact@igor-zivkovic.from.hr>
   * Added acpid bootscript

2013-02-04 Armin K. <krejzi@email.com>
   * Added network service for wpa_supplicant
   * Minor modifications to dhclient network service

2012-08-26 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Restore winbindd script

2012-08-25 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Restore xinetd script

2012-08-14 Armin K. <krejzi@email.com>