@@ -6,9 +6,9 @@
 
   <!ENTITY bluez-download-http "http://www.kernel.org/pub/linux/bluetooth/bluez-&bluez-version;.tar.xz">
   <!ENTITY bluez-download-ftp  "ftp://ftp.kernel.org/pub/linux/bluetooth/bluez-&bluez-version;.tar.xz">
-  <!ENTITY bluez-md5sum        "37b785185fb98269b45e51b254bd8d3d">
+  <!ENTITY bluez-md5sum        "41bd0c915abde255622150ce6dcae67b">
   <!ENTITY bluez-size          "1.4 MB">
-  <!ENTITY bluez-buildsize     "57 MB (additional 17 MB for the tests)">
+  <!ENTITY bluez-buildsize     "53 MB (additional 17 MB for the tests)">
   <!ENTITY bluez-time          "0.5 SBU (additional 0.2 SBU for the tests)">
 ]>
 
