@@ -48,6 +48,11 @@
       <para>November 11th, 2014</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Update to bluez-5.25. Also fixed install of
+          blfs/sysconfig/bluetooth in bootscripts.  Fixes
+          <ulink url="&blfs-ticket-root;5786">#5786</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[ken] - Update to libpaper_1.1.24+nmu4. Fixes
           <ulink url="&blfs-ticket-root;5776">#5776</ulink>.</para>
         </listitem>
