@@ -57,6 +57,7 @@ pathappend &kde-dir;/bin             PATH
 pathappend &kde-dir;/lib/pkgconfig   PKG_CONFIG_PATH
 pathappend &kde-dir;/share/pkgconfig PKG_CONFIG_PATH
 pathappend &kde-dir;/share           XDG_DATA_DIRS
+pathappend &kde-dir;/share/man       MANPATH
 pathappend /etc/kde/xdg                XDG_CONFIG_DIRS
 
 export &kde-dir-var; KDEDIR
