@@ -210,7 +210,7 @@
 <!ENTITY acpid-version                "2.0.23">
 <!ENTITY at-version                   "3.1.16">
 <!ENTITY autofs-version               "5.1.0">
-<!ENTITY bluez-version                "5.24">
+<!ENTITY bluez-version                "5.25">
 <!ENTITY colord-version               "1.2.5">    <!-- Even minors only -->
 <!ENTITY cpio-version                 "2.11">
 <!ENTITY dbus-version                 "1.8.10">   <!-- Even minors only -->
